--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
     "debug": "^4.4.0",
     "ejs": "^3.1.10",
